[tool.poetry]
name = "siu-result"
version = "0.1.0"
description = ""
authors = ["Aman Phatak <phatakaman@gmail.com>"]
readme = "README.md"
packages = [{include = "siu_result"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.35.0"
black = "^23.3.0"
aiohttp = "^3.8.4"
yarl = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
